--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ pyannote.metrics==3.2.1
 pyannote.pipeline==3.0.1
 pydub==0.25.1
 rich==14.0.0
+scikit_learn==1.6.1
 scipy==1.15.2
 sounddevice==0.5.1
+speechbrain==1.0.2
 torch==2.5.1+cu121
